--- a/blocks/table/__text/table__text.css
+++ b/blocks/table/__text/table__text.css
@@ -1,6 +1,6 @@
-.table__cell_text {
+.table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin-bottom: 0;
+  margin: 20px 0 0;
 }
