--- a/blocks/two-columns/__main-text/two-columns_main-text.css
+++ b/blocks/two-columns/__main-text/two-columns_main-text.css
@@ -1,4 +1,4 @@
-.two-columns_main-text {
+.two-columns__main-text {
   width: 80%;
   min-width: 784px;
   line-height: 34px;
@@ -6,9 +6,9 @@
   font-weight: normal;
   margin: 0;
 }
-.two-columns_main-text:nth-of-type(2) {
+.two-columns__main-text:nth-of-type(2) {
   margin-top: 30px;
 }
-.two-columns_main-text:nth-of-type(3) {
+.two-columns__main-text:nth-of-type(3) {
   margin-top: 30px;
 }
