--- a/index.css
+++ b/index.css
@@ -4,18 +4,17 @@
 @import url(./blocks/page/page.css);
 @import url(./blocks/page/__title/page__title.css);
 /* import animations */
-@import url(./blocks/animation/__rotation/animation__rotation.css);
-@import url(./blocks/animation/__opacity/animation__opacity.css);
+@import url(./blocks/opacity/opacity.css);
+@import url(./blocks/rotation/rotation.css);
 /* import section-title+subtitle */
 @import url(./blocks/section-title/section-title.css);
 @import url(./blocks/section-subtitle/section-subtitle.css);
 /* import table elements */
 @import url(./blocks/table/table.css);
 @import url(./blocks/table/__cell/table__cell.css);
-@import url(./blocks/table/__cell/_heading/table__cell_heading.css);
-@import url(./blocks/table/__cell/_text/table__cell_text.css);
-@import url(./blocks/table/__cell/_text/_cite/table__cell_text_cite.css);
-@import url(./blocks///table/__cell/_theme/_dark/table__cell_theme_dark.css);
+@import url(./blocks/table/__heading/table__heading.css);
+@import url(./blocks/table/__text/table__text.css);
+@import url(./blocks/table/__text/_theme_dark/table__text_theme_dark.css);
 /* import block header */
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__link/header__link.css);
@@ -23,14 +22,14 @@
 @import url(./blocks/header/__square-pic/header__square-pic.css);
 @import url(./blocks/header/__subtitle/header__subtitle.css);
 @import url(./blocks/header/__title/header__title.css);
-@import url(./blocks/logo/__place/_header/logo__place_header.css);
+@import url(./blocks/logo_place_header/logo_place_header.css);
 /* import block description */
 @import url(./blocks/description/description.css);
 /*import two-columns */
-@import url(./blocks/two-columns/description__two-columns.css);
-@import url(./blocks/two-columns/_brief/description__two-columns_brief.css);
-@import url(./blocks/two-columns/_main-text/description__two-columns_main-text.css);
-@import url(./blocks/two-columns/_span-accent/description__two-columns_span-accent.css);
+@import url(./blocks/two-columns/two-columns.css);
+@import url(./blocks/two-columns/__brief/two-columns_brief.css);
+@import url(./blocks/two-columns/__main-text/two-columns_main-text.css);
+@import url(./blocks/two-columns/__span-accent/two-columns_span-accent.css);
 /* import block techniques */
 @import url(./blocks/techniques/techniques.css);
 /* import cards */
@@ -72,7 +71,6 @@
 @import url(./blocks/kaufman/__triangle/kaufman__triangle.css);
 @import url(./blocks/kaufman/__table/kaufman__table.css);
 @import url(./blocks/kaufman/__table/__cell/kaufman__table__cell.css);
-@import url(./blocks/kaufman/__theme/_dark/kaufman__theme_dark.css);
 /* import block resources */
 @import url(./blocks/resources/resources.css);
 @import url(./blocks/resources/__logo-zone/resources__logo-zone.css);
@@ -87,4 +85,4 @@
 @import url(./blocks/footer/__column/_links/_style/footer__column_links_style.css);
 @import url(./blocks/footer/__columns/footer__columns.css);
 @import url(./blocks/footer/__content/_copyright/footer__content_copyright.css);
-@import url(./blocks/logo/__place/_footer/logo__place_footer.css);
+@import url(./blocks/logo_place_footer/logo_place_footer.css);
