--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,8 +1,7 @@
 .kaufman {
   background-color: #1f1f1f;
-  position: relative;
   padding: 90px 0;
-  display: flex;
-  flex-direction: column;
+  margin: 0 auto;
+  position: relative;
   overflow: hidden;
 }
