--- a/blocks/table/__cell/_theme/_dark/table__cell_theme_dark.css
+++ b/blocks/table/__cell/_theme/_dark/table__cell_theme_dark.css
@@ -1,7 +1,5 @@
-.table__text_theme_dark {
+.table__cell_theme_dark {
   width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  margin: 80px 0 0;
   z-index: 5;
 }
