--- a/index.css
+++ b/index.css
@@ -3,18 +3,27 @@
 /* import page styles */
 @import url(./blocks/page/page.css);
 @import url(./blocks/page/__title/page__title.css);
+/* import logo */
+@import url(./blocks/logo/logo.css);
+@import url(./blocks/logo/_place/_header/logo_place_header.css);
+@import url(./blocks/logo/_place/_footer/logo_place_footer.css);
 /* import animations */
 @import url(./blocks/opacity/opacity.css);
 @import url(./blocks/rotation/rotation.css);
 /* import section-title+subtitle */
 @import url(./blocks/section-title/section-title.css);
 @import url(./blocks/section-subtitle/section-subtitle.css);
+@import url(./blocks/section-title/_theme/_dark/section-title_theme_dark.css);
+@import url(./blocks/section-subtitle/_theme/_dark/section-subtitle_theme_dark.css);
 /* import table elements */
 @import url(./blocks/table/table.css);
 @import url(./blocks/table/__cell/table__cell.css);
 @import url(./blocks/table/__heading/table__heading.css);
 @import url(./blocks/table/__text/table__text.css);
 @import url(./blocks/table/__text/_theme_dark/table__text_theme_dark.css);
+@import url(./blocks/table/__theme/_dark/table__theme_dark.css);
+@import url(./blocks/table/__cell/_theme/_dark/table__cell_theme_dark.css);
+@import url(./blocks/table/__heading/_theme/_dark/table__heading_theme_dark.css);
 /* import block header */
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__link/header__link.css);
@@ -22,7 +31,6 @@
 @import url(./blocks/header/__square-pic/header__square-pic.css);
 @import url(./blocks/header/__subtitle/header__subtitle.css);
 @import url(./blocks/header/__title/header__title.css);
-@import url(./blocks/logo_place_header/logo_place_header.css);
 /* import block description */
 @import url(./blocks/description/description.css);
 /*import two-columns */
@@ -69,8 +77,6 @@
 /* import block kaufman */
 @import url(./blocks/kaufman/kaufman.css);
 @import url(./blocks/kaufman/__triangle/kaufman__triangle.css);
-@import url(./blocks/kaufman/__table/kaufman__table.css);
-@import url(./blocks/kaufman/__table/__cell/kaufman__table__cell.css);
 /* import block resources */
 @import url(./blocks/resources/resources.css);
 @import url(./blocks/resources/__logo-zone/resources__logo-zone.css);
@@ -85,4 +91,3 @@
 @import url(./blocks/footer/__column/_links/_style/footer__column_links_style.css);
 @import url(./blocks/footer/__columns/footer__columns.css);
 @import url(./blocks/footer/__content/_copyright/footer__content_copyright.css);
-@import url(./blocks/logo_place_footer/logo_place_footer.css);
