--- a/index.css
+++ b/index.css
@@ -85,6 +85,7 @@
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/footer/__author/footer__author.css);
 @import url(./blocks/footer/__columns/footer__columns.css);
+@import url(./blocks/footer/__column/footer__column.css);
 @import url(./blocks/footer/__column-link/footer__column-link.css);
 @import url(./blocks/footer/__social-icon/footer__social-icon.css);
 @import url(./blocks/footer/__column-heading/footer__column-heading.css);
