--- a/blocks/feynman/__image/feynman__image.css
+++ b/blocks/feynman/__image/feynman__image.css
@@ -1,5 +1,5 @@
 .feynman__image {
-  display: flex;
+  background-image: url(../../../images/feynman.png);
   position: absolute;
   bottom: 0;
   left: 0;
