--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -3,7 +3,7 @@
   font-size: 102px;
   font-weight: 600;
   z-index: 5;
-  margin: auto;
+  margin: 0;
   margin-left: 64px;
   line-height: 96px;
 }
