--- a/blocks/two-columns/__brief/two-columns__brief.css
+++ b/blocks/two-columns/__brief/two-columns__brief.css
@@ -1,6 +1,6 @@
 .two-columns__brief {
   width: 175px;
-  margin-top: 0;
+  margin: 0;
   font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
