--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,4 +1,7 @@
 .resources__logo-zone {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   width: 1100px;
   margin: 80px auto 0;
 }
