--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -2,11 +2,8 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin: 0;
+  margin: 30px 0 0;
 }
-.two-columns__paragraph:nth-of-type(2) {
-  margin-top: 30px;
-}
-.two-columns__paragraph:nth-of-type(3) {
-  margin-top: 30px;
+.two-columns__paragraph:first-of-type {
+  margin-top: 0;
 }
